[package]
name = "llmchat"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2"
anyhow = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
rustyline = "17"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
futures-util = "0.3"
colored = "2"
indicatif = "0.17"
syntect = "5"
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"
